test/frontend/pass/color_array.osl
shader test(output float c = 1) {
    color k[3] = { 0, 0, 0 };
    c = k[1][1];
}
