test/frontend/fail/invalid_shader.osl
shader test() {
    return 42;
}
